--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ requests = "*"
 sqlalchemy = "*"
 
 [dev-packages]
+mypy = "*"
+v = {version = "*", editable = true}
 
 [requires]
 python_version = "3.7"
