Substitution now savable in db + starting up associate dev for UI

--- a/ui/console/page_contents.yml
+++ b/ui/console/page_contents.yml
@@ -29,7 +29,7 @@ S_PRODUCT_PAGE: |
     - magasin(s) : %(stores)s
     - URL: %(url)s
 
-    1 - Trouver des substituts plus sain
+    1 - Trouver des substituts plus sains
     2 - Sauvegarder dans les favoris
 
 S_LIST_SUBSTITUTES: |
@@ -50,3 +50,7 @@ F_PRODUCT_PAGE: |
     - nutriscore : %(nutrition_grade)s
     - magasin(s) : %(stores)s
     - URL: %(url)s
+
+S_SAVED_FAVORITE: |
+
+    Substitut sauvegardé !
