Favorite insertion from ConsoleUI OK

--- a/ui/console/page_contents.yml
+++ b/ui/console/page_contents.yml
@@ -54,3 +54,4 @@ F_PRODUCT_PAGE: |
 S_SAVED_FAVORITE: |
 
     Substitut sauvegardé !
+    "%(substituted)s" est préféré à "%(substituter)s" et sauvegardé en base.
